Prepare v0.24.0 release
